--- a/sort/Cargo.toml
+++ b/sort/Cargo.toml
@@ -1,8 +1,6 @@
 [package]
-name = "guessing_game"
+name = "sort"
 version = "0.1.0"
 authors = ["Eric Eckert <eric95@uw.edu>"]
 
 [dependencies]
-
-rand="0.3.0"
